tests/rosetta/transpiler/C/image-noise.c
// Generated by Mochi 0.10.32 on 2025-08-01 18:59 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <malloc.h>
#include <gmp.h>
typedef mpq_t* bigrat;
typedef mpz_t* bigint;


static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(int v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%d", v);
    return strdup(buf);
}

static bigrat _bigrat(long n, long d) {
    bigrat r = malloc(sizeof(mpq_t));
    mpq_init(*r);
    mpq_set_si(*r, n, d);
    mpq_canonicalize(*r);
    return r;
}

static bigrat _add(bigrat a, bigrat b) {
    bigrat r = malloc(sizeof(mpq_t));
    mpq_init(*r);
    mpq_add(*r, *a, *b);
    return r;
}

static bigrat _sub(bigrat a, bigrat b) {
    bigrat r = malloc(sizeof(mpq_t));
    mpq_init(*r);
    mpq_sub(*r, *a, *b);
    return r;
}

static bigrat _mul(bigrat a, bigrat b) {
    bigrat r = malloc(sizeof(mpq_t));
    mpq_init(*r);
    mpq_mul(*r, *a, *b);
    return r;
}

static bigrat _div(bigrat a, bigrat b) {
    bigrat r = malloc(sizeof(mpq_t));
    mpq_init(*r);
    mpq_div(*r, *a, *b);
    return r;
}

static mpz_srcptr num(bigrat a) { return mpq_numref(*a); }
static mpz_srcptr denom(bigrat a) { return mpq_denref(*a); }

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    struct mallinfo mi = mallinfo();
    return (long long)mi.uordblks;
}

int width = 320LL;
int height = 240LL;
int y = 0LL;

bigint nextRand();
int randBit();
int main(void);

bigint nextRand() {
    seed = ((seed * 1664525LL) + 1013904223LL) % 2147483647LL;
    return seed;
}

int randBit() {
    bigint r = nextRand();
    if ((r % 2LL) == 0LL) {
        return 0LL;
    }
    return 255LL;
}

int main(void) {
    {
        long long __start = _now();
        long long __mem_start = _mem();
        int seed = _now() % 2147483647LL;
        puts("P2");
        puts(str_concat(str_concat(str_int(width), " "), str_int(height)));
        puts("255");
        while (y < height) {
            const char* line = "";
            int x = 0LL;
            while (x < width) {
                int val = randBit();
                line = str_concat(line, str_int(val));
                if (x < (width - 1LL)) {
                    line = str_concat(line, " ");
                }
                x = x + 1LL;
            }
            puts(line);
            y = y + 1LL;
        }
        long long __end = _now();
        long long __mem_end = _mem();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = __mem_end - __mem_start;
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
